@@ -397,14 +397,7 @@ class GO_Base_Config {
 	 */
 	var $force_ssl=false;
 
-	/**
-	 * Full URL to reach Group-Office with trailing slash. This value is determined
-	 * automatically if not set in config.php
-	 *
-	 * @var     string
-	 * @access  public
-	 */
-	var $full_url = '';
+	
 
 	/**
 	 * Title of Group-Office
@@ -890,6 +883,15 @@ class GO_Base_Config {
 	 //////////      Variables that are not touched by the installer   /////////////
 	 //////////////////////////////////////////////////////////////////////////////*/
 	
+	/**
+	 * Full URL to reach Group-Office with trailing slash. This value is determined
+	 * automatically if not set in config.php
+	 *
+	 * @var     string
+	 * @access  public
+	 */
+	var $full_url = '';
+	
 	
 	/**
 	 * Enable zlib compression for faster downloading of scripts and css
@@ -945,7 +947,7 @@ class GO_Base_Config {
 	 * @var     string
 	 * @access  public
 	 */
-	var $version = '5.0.48';
+	var $version = '5.0.49';
 
 	
 	/**
@@ -955,7 +957,7 @@ class GO_Base_Config {
 	 * @access  public
 	 */
 
-	var $mtime = '20140320';
+	var $mtime = '20140326';
 
 	#group configuration
 	/**
@@ -1673,7 +1675,7 @@ class GO_Base_Config {
 
 		foreach($values as $key=>$value)
 		{
-			if($key == 'version')
+			if($key == 'full_url')
 			break;
 
 			if(!is_object($value))
